* Enable our old Posters 1.x to run with Java 21.