@@ -11,4 +11,4 @@ if not exist logs mkdir logs
 set JAVA_OPTIONS=%JAVA_OPTIONS% -Xmx512m
 
 :: run Java
-java -jar start.jar %JAVA_OPTIONS%
+java --add-opens=java.base/java.lang=ALL-UNNAMED -jar start.jar %JAVA_OPTIONS%
